[project]
name = "td3-validation"
version = "0.1.0"
description = "Isolated validation of a custom TD3 implementation against Gymnasium's Pendulum-v1."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "torch>=2.13.0",
]
